Changelog:   swagger.yaml     removed /hello test endpoint     updated a few names to be consistent across the project     added GET /cleaners endpoint
  Cleaners.js
    Added the cleaners object to the project

  Cleanings.js
    Added the cleanings object to the project

  hello_world.js
    Removed the hello_world controller for the /hello endpoint

  properties_controller.js
    added some error handling

  cleaners_controller.js
    added all functionality for CRUD operations on the cleaners collection
